--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
                             };
                             
                             console.log(arriaData);
-                            return fetch('https://app.studio.arria.com:443/alite_content_generation_webapp/text/gbNoAd5Jb52', {//change to arria endpoint
+                            return fetch('https://app.studio.arria.com:443/alite_content_generation_webapp/text/OmOYXgq5Vqr', {//change to arria endpoint
                                 method: 'POST',
                                 headers: {
-                                    'Access-Control-Allow-Origin': 'http://localhost:8000',
-                                    'Authorization': 'Bearer eyJhbGciOiJIUzUxMiJ9.eyJqdGkiOiJyelM0YjltNmF0cUI0T20wUjhhNk9zbW8iLCJpYXQiOjE3NDY0NDcyOTcsImV4cCI6MTkwNDEyNzI5NywiaXNzIjoiQUxpdGUiLCJzdWIiOiIxLTkwUDlVZFYzWmUiLCJBTGl0ZS5wZXJtIjpbInByczp4OmdiTm9BZDVKYjUyIl0sIkFMaXRlLnR0IjoidV9hIn0.UYkcP9kJo8BfKYZN3G22LTBLkzOAA5OtjmYG1_Ua4A7st7K2CHrO_XKZBIpKm4VUHPfoq_99rENVjyvuGl4G6w',
+                                    'Access-Control-Allow-Origin': 'https://nlg-nutribawl.vercel.app/',
+                                    'Authorization': 'Bearer eyJhbGciOiJIUzUxMiJ9.eyJqdGkiOiIwcHNIS3BHcEl1aDZWRFN3bEkzS1ZvbEUiLCJpYXQiOjE3NDQ3MjU1MzcsImV4cCI6MTkwMjQwNTUzNywiaXNzIjoiQUxpdGUiLCJzdWIiOiJRak5xcS1kOXEzSVIiLCJBTGl0ZS5wZXJtIjpbInByczp4Ok9tT1lYZ3E1VnFyIl0sIkFMaXRlLnR0IjoidV9hIn0.xhUYLENzZ0No_sFFcLzYgU6lnjyUJ616ZtHwJB5qfUsBlDQjKB1qboe2jllWmMaBPjoiyFWZoObSgfoXIPfysQ',
                                     'Content-Type': 'application/json'
                                 },
                                 body: JSON.stringify(arriaData)
